src/test/deca/context/valid/sansObj/assign-compatible-bool-bool.deca
// Description:
//    Affectation de deux booléens entre eux
//
// Résultat:
//    Succès
//
{
   boolean a;
   boolean b;

   // Doit etre accepté.
   a = b;
}