src/test/deca/context/invalid/sansObj/multi-bool.deca
// Description:
//    Multiplication d'un int et d'un boolean
//
// Résultat:
//Opération entre 2 objets de types incompatibles

{
   int a;
   boolean b = false;
   a = a * b;
}